whoami/01_deployment.yml
# declare Traefik deployment
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: demo-whoami-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-whoami
  template:
    metadata:
      labels:
        app: demo-whoami
    spec:
      containers:
        - name: whoami
          image: "emilevauge/whoami"
          ports:
            - containerPort: 80
