whoami/02_service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-whoami-service
spec:
  selector:
    app: demo-whoami
  ports:
    - port: 80
  type: NodePort
